<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="GVL_ResearchData" Id="{10f77899-a32f-44e6-ad7f-4be50514220e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Global Varable to collect all research data
// 
// AUTHOR      :  Seyma Gürel / Philippe Fleischmann / Weiting Chen
// 
// EMAIL       :  scotto@arch.ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2021
//
// ***********************************************************************************


// ***********************************************************************************
// Process inputs
// ***********************************************************************************

// WT ADD 
// Mode 
b_RED_Mode_Manual: BOOL; //Mode
b_RED_Mode_Laptop: BOOL; //Mode


// Temperature and Pressure Sensor
TemperatureAndPressure: STRING := 'TemperatureAndPressure';//***********************************************************

f_RED_Status_Temperature_Funnel_outlet : REAL; // [°C] 
f_RED_Status_Pressure_Funnel_inlet : REAL; // [ bar]

f_RED_Status_Temperature_Concrete_Pump_fresh : REAL; // [°C]
f_RED_Status_Temperature_Concrete_Pump : REAL; // [°C] 
f_RED_Status_Pressure_Concrete_Pump: REAL; // [ bar]


// Power On 
//b_RED_Concrete_Pump_Power_On_Laptop: BOOL;		// NOT USE NOW


//
MIXER: STRING := 'MIXER';//***********************************************************

// Inline Mixer Reactor				
b_RED_Laptop_MI1_Run: BOOL;						// POWER ON *****
f_RED_Control_Speed_by_Laptop:REAL;				// [0 rpm to 120 rpm]
b_RED_Mixer_Curved_Speed_On: BOOL;				// Curved Speed Mode

//
CONCRETE_PUMP: STRING := 'CONCRETE_PUMP';//***************************

// Concrete Pump
b_RED_Concrete_Pump_Forward_On: BOOL;			// Forward ON ******
b_RED_Concrete_Pump_Backward_On: BOOL;			// Forward ON ******
n_RED_Concrete_Pump_Speed: INT;					// **** WRITE VALUE From 0 to 75 ***[rpm] 


b_RED_Concrete_Pump_Check_On: BOOL;				// CHECK MODE ON 
f_RED_Concrete_Pump_Check_Flowrate: REAL; 		// [l/min]
n_RED_Concrete_Pump_Check_Duration_Time: TIME;
f_RED_Concrete_Pump_Density: REAL;				// [g/ml]
f_RED_Concrete_Pump_Check_Mass: REAL;           // [g]

b_RED_Concrete_Pump_Flush_On: BOOL;				// FLUSH MODE ON 
n_RED_Concrete_Pump_Flush_Flowrate: REAL;		// [l/min]

f_RED_Concrete_Pump_Flowrate: REAL; 			// **** WRITE VALUE from _ to 16 [l/min]
f_RED_Concrete_Pump_dosing_volume: REAL;		// calibation 230926 WT


//
Superplasticizer_Pump: STRING := 'Superplasticizer_Pump'; //***************************

// Superplasticizer Pump (WT
b_RED_Superplasticizer_Pump_Power_On_Laptop: BOOL;  // POWER ON 

b_RED_Superplasticizer_Pump_Check_On: BOOL;			// CHECK MODE ON 
n_RED_Superplasticizer_Pump_Check_Flowrate: REAL;
n_RED_Superplasticizer_Pump_Check_Duration: TIME;
f_RED_Superplasticizer_Pump_Density: REAL;          // [g/ml]
f_RED_Superplasticizer_Pump_Mass: REAL;             // [g]

b_RED_Superplasticizer_Pump_Flush_On: BOOL;			// FLUSH MODE ON 
n_RED_Superplasticizer_Pump_Flush_Flowrate: REAL;

n_RED_Superplasticizer_Pump_Max_Flowrate:REAL;
n_RED_Superplasticizer_Pump_Flowrate: REAL;         // **** WRITE VALUE From **** [ml/min]

n_RED_Superplasticizer_Pump_dosing_factor:REAL:=1.05;

//
ACCELERATION_PUMP: STRING := 'Acceleration_Pump';//***************************

// Accelerator Pump (WT
b_RED_Accelerastor_Pump_Power_On_Laptop: BOOL;  // POWER ON ******

b_RED_Acceleration_Pump_Check_On: BOOL;			// CHECK MODE ON 
n_RED_Acceleration_Pump_Check_Flowrate: REAL;
n_RED_Acceleration_Pump_Check_Duration: TIME;
f_RED_Acceleration_Pump_Density: REAL;          // [g/ml]
f_RED_Acceleration_Pump_Mass: REAL;             // [g]

b_RED_Acceleration_Pump_Flush_On: BOOL;			// FLUSH MODE ON 
n_RED_Acceleration_Pump_Flush_Flowrate: REAL;

n_RED_Acceleration_Pump_Max_Flowrate :REAL;
n_RED_Acceleration_Pump_Flowrate: REAL;         // **** WRITE VALUE From **** [ml/min] 

n_RED_Acceleration_Pump_dosing_factor: REAL:=1;


// ***********************************************************************************
// Process outpus
// ***********************************************************************************

//
PROCESS_OUTPUTS: STRING := 'PROCESS_OUTPUTS';//***********************************************************

// 
// Status mixer
b_RED_Status_On : BOOL;
//f_RED_Status_Speed_Overide : LREAL;
f_RED_Status_Speed_Motor_1 : LREAL;					//[rpm]
f_RED_Status_Speed_Motor_2 : LREAL;					//[rpm]
f_RED_Status_Velo_Motor_1 : LREAL;
f_RED_Status_Velo_Motor_2 :LREAL;

f_RED_Status_Torque_Motor_1 : LREAL;				// [Nm]
f_RED_Status_Torque_Motor_2 : LREAL;				// [Nm]

f_RED_Status_Temperature_Motor_1 : REAL; // [°C] 
f_RED_Status_Temperature_Motor_2 : REAL; // [°C] 


//
// Superplasticizer Pump (WT 220916
//n_RED_Status_Superplasticizer_Pump_Flowrate: INT;          // [ml/min]
f_RED_Status_Superplasticizer_Pump_Max_Flowrate_ml_per_min: REAL;           // [ml/min]

//
// Accelerator Pump
//n_RED_Status_Acceleration_Pump_Flowrate: INT;          // [ml/min]
f_RED_Status_Acceleration_Pump_Max_Flowrate_ml_per_min: REAL;           // [ml/min]

//
//Concrete Pump
f_RED_Status_Concrete_Pump_Max_Flowrate_l_per_min: REAL;           // [l/min]


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>