<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="P_Outputs_Laptop" Id="{bcd714bb-3f40-4b88-8117-548c3a821447}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Outputs_Laptop
VAR
	//
	n_temp_speed_SP1: REAL;
	n_temp_speed_AP1: REAL;
	n_temp_speed_MI1: REAL;
	
	n_temp_speed_CP1: REAL;
	n_temp_flowrate_CP1: REAL;
	
	
	// temp data for concrete pump
	n_max_pump_speed: REAL :=75;    // measure value 
	n_target_pump_speed: REAL :=25; // by calibration (7.5L/min)
	n_test_pump_speed: REAL :=50;   // NEW NOTES 230926 current dosing rate is 0.32 L/rev Check real flowrate 50*0.32 = 16L/min
	f_dosing_volume:REAL; 
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System
// 
// FUNCTION    :  Outputs Laptop Mode
// 
// AUTHOR      :  Weiting Chen/ Philippe Fleischmann 
// 
// EMAIL       :  chenw@usi.ch
// 
// Copyright   :  USI , ETH Zürich (CH) 2022
//
// ***********************************************************************************


//***********************************************************************************
// Mixer 1
//***********************************************************************************

// pass

//***********************************************************************************
// Superplasticizer pump 1
//***********************************************************************************

//
// Power on
GVL_IO.ob_SP1_Power_On:=GVL_VAR.b_Mode_Laptop;
//
// Pressure is Okay, always set it to True
GVL_IO.ob_SP1_Pressure_Ok:=TRUE;
//
// Bucket is not empty, always set it to true
GVL_IO.ob_SP1_Not_Empty:=TRUE;
//
// Pulse mode is a preset amount,  not in use
GVL_IO.ob_SP1_Pulse:=FALSE;

//
// Start pump
IF		P_SP1_OnOff.n_step= 30 
	OR 	P_SP1_Check.n_Step= 30 
THEN
	//
	// Pump On
	GVL_IO.ob_SP1_Start:=TRUE;
ELSE
	//
	// Pump On
	GVL_IO.ob_SP1_Start:=FALSE;
END_IF

//
// Speeds for Superplastizier pump

IF GVL_ResearchData.b_RED_Superplasticizer_Pump_Flush_On AND P_SP1_OnOff.n_step= 30 THEN
	//
	// Process speed for flushing or filling the pipe
	n_temp_speed_SP1:=GVL_ResearchData.n_RED_Superplasticizer_Pump_Flush_Flowrate;

ELSIF P_SP1_Check.n_Step=20 OR P_SP1_Check.n_Step=30 THEN 	
	//	
	// Check Flowrate for pump
	n_temp_speed_SP1:=GVL_ResearchData.n_RED_Superplasticizer_Pump_Check_Flowrate;
	
ELSE
	//
	// Process speed for pump
	n_temp_speed_SP1:=GVL_ResearchData.n_RED_Superplasticizer_Pump_Flowrate;

END_IF


GVL_IO.on_SP1_Speed:=F_ScalAnalogOut(
	n_Input:= REAL_TO_INT(n_temp_speed_SP1),
	n_InMin:= 0, 
	n_InMax:= REAL_TO_INT(GVL_ResearchData.f_RED_Status_Superplasticizer_Pump_Max_Flowrate_ml_per_min*GVL_ResearchData.n_RED_Superplasticizer_Pump_dosing_factor), 
	n_OutMin:= 0, 
	n_OutMax:= 32767);


//***********************************************************************************
// Accelerator pump 1
//***********************************************************************************

//
// Power on
GVL_IO.ob_AP1_Power_On:=GVL_VAR.b_Mode_Laptop;
//
// Pressure okey always set to true
GVL_IO.ob_AP1_Pressure_Ok:=TRUE;
//
// Bucket not empty always set to true
GVL_IO.ob_AP1_Not_Empty:=TRUE;
//
// Pulse a preset amount not in use
GVL_IO.ob_AP1_Pulse:=FALSE;

//
// Start pump
IF 	   P_AP1_OnOff.n_Step=30 
	OR P_AP1_Check.n_Step=30
THEN
	//
	// Pump on
	GVL_IO.ob_AP1_Start:=TRUE;
ELSE
	//
	// Pump off
	GVL_IO.ob_AP1_Start:=FALSE;
END_IF

//
// Speed for accelerator pump

IF GVL_ResearchData.b_RED_Acceleration_Pump_Flush_On AND P_AP1_OnOff.n_Step=30 THEN
	//
	// Process speed for flushing or filling the pipe
	n_temp_speed_AP1:=GVL_ResearchData.n_RED_Acceleration_Pump_Flush_Flowrate;
ELSIF P_AP1_Check.n_Step=20 OR P_AP1_Check.n_Step=30 THEN
	//	
	// Check Flowrate for pump
	n_temp_speed_AP1:=GVL_ResearchData.n_RED_Acceleration_Pump_Check_Flowrate;
ELSE
	//
	// Process speed for pump
	n_temp_speed_AP1:=GVL_ResearchData.n_RED_Acceleration_Pump_Flowrate;
END_IF

GVL_IO.on_AP1_Speed:=F_ScalAnalogOut(
	n_Input:= REAL_TO_INT(n_temp_speed_AP1),
	n_InMin:= 0, 
	n_InMax:= REAL_TO_INT(GVL_ResearchData.f_RED_Status_Acceleration_Pump_Max_Flowrate_ml_per_min*GVL_ResearchData.n_RED_Acceleration_Pump_dosing_factor), 
	n_OutMin:= 0, 
	n_OutMax:= 32767);


// ***********************************************************************************
// Concrete Pump 1 
// ***********************************************************************************

//
// Start
IF  P_CP1_Enable.n_Step=20 THEN
	GVL_IO.ob_CP1_Start:=TRUE;
ELSE
	GVL_IO.ob_CP1_Start:=FALSE;
END_IF

//
// Stop
IF  P_CP1_Enable.n_Step=40 THEN
	GVL_IO.ob_CP1_Stop:=TRUE;
ELSE
	GVL_IO.ob_CP1_Stop:=FALSE;
END_IF


//
// Forward
GVL_IO.ob_CP1_Forward:=GVL_ResearchData.b_RED_Concrete_Pump_Forward_On;

//
// Backward
GVL_IO.ob_CP1_Backward:=GVL_ResearchData.b_RED_Concrete_Pump_Backward_On;

//
// Concrete pump speed  0 (0V) to 75 rpm (10V)
// Concrete pump max target speed  0 to 25 rpm
// Concrete pump max target Flowrate  0 to 5000 ml/min
// Dosing Volume for Concrete pump is 0.32 L/rev, calibrated 230826 WT 

IF GVL_ResearchData.b_RED_Concrete_Pump_Flush_On THEN
	//
	// Process speed for flushing or filling the pipe
	n_temp_flowrate_CP1:=GVL_ResearchData.f_RED_Status_Concrete_Pump_Max_Flowrate_l_per_min*1000;
ELSIF P_CP1_Check.n_Step=20 OR P_CP1_Check.n_Step=25 THEN
	//	
	// Check Flowrate for pump
	n_temp_flowrate_CP1:=GVL_ResearchData.f_RED_Concrete_Pump_Check_Flowrate*1000;
ELSE
	//
	// Process speed for pump
	n_temp_flowrate_CP1:=GVL_ResearchData.f_RED_Concrete_Pump_Flowrate*1000;
END_IF

//TODO 
GVL_ResearchData.f_RED_Concrete_Pump_dosing_volume:= 0.32;

// temporary remapping  
n_temp_speed_CP1:=F_Mapping_REAL(
	f_Input:= n_temp_flowrate_CP1, 
	f_InMin:= 0, 
	f_InMax:= n_test_pump_speed*GVL_ResearchData.f_RED_Concrete_Pump_dosing_volume*1000,
	f_OutMin:= 0, 
	f_OutMax:= n_test_pump_speed);

// Concrete pump speed  0 (0V) to 75 rpm (10V)
GVL_IO.on_CP1_Speed:=REAL_TO_INT(F_Mapping_REAL(
	f_Input:= n_temp_speed_CP1, 
	f_InMin:= 0, 
	f_InMax:= n_max_pump_speed, 
	f_OutMin:= 0, 
	f_OutMax:= 32767));
	]]></ST>
    </Implementation>
    <LineIds Name="P_Outputs_Laptop">
      <LineId Id="6" Count="18" />
      <LineId Id="198" Count="0" />
      <LineId Id="183" Count="3" />
      <LineId Id="196" Count="0" />
      <LineId Id="182" Count="0" />
      <LineId Id="178" Count="3" />
      <LineId Id="25" Count="12" />
      <LineId Id="39" Count="16" />
      <LineId Id="365" Count="0" />
      <LineId Id="56" Count="15" />
      <LineId Id="361" Count="0" />
      <LineId Id="72" Count="40" />
      <LineId Id="363" Count="0" />
      <LineId Id="385" Count="0" />
      <LineId Id="114" Count="40" />
      <LineId Id="288" Count="0" />
      <LineId Id="155" Count="10" />
      <LineId Id="223" Count="0" />
      <LineId Id="222" Count="0" />
      <LineId Id="265" Count="0" />
      <LineId Id="224" Count="0" />
      <LineId Id="207" Count="11" />
      <LineId Id="205" Count="0" />
      <LineId Id="360" Count="0" />
      <LineId Id="340" Count="1" />
      <LineId Id="248" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="240" Count="4" />
      <LineId Id="228" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="304" Count="0" />
      <LineId Id="316" Count="4" />
      <LineId Id="305" Count="0" />
      <LineId Id="221" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>