<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_SP1_Check" Id="{d4ed01ea-2d2d-4393-bdfd-6d15b0d5b421}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_SP1_Check
VAR_INPUT
	//
	//INT
	n_Step: INT:=0;
END_VAR
VAR
	//
	// BOOL 
	b_Condition: BOOL;
	b_No_Emergency_Stop: BOOL:=TRUE;

	//
	// Timer
	t_SP1_Calibration_Time: TON; 
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 
// 
// FUNCTION    :  Step chain for Superplasticizer pump system check
// 
// AUTHOR      :  Weiting Chen / Philippe Fleischmann
// 
// EMAIL       :  
// 
// Copyright   :  
//
// ***********************************************************************************

//
// Ignore emergency stop
b_No_Emergency_Stop:=TRUE;

//
// Initalization
IF n_Step=0 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do 
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

//
// Wait for activating calibration
IF n_Step=10 THEN
	//
	// Check condition 
	b_Condition:= GVL_ResearchData.b_RED_Superplasticizer_Pump_Check_On;
	//
	// Do
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=20;
	END_IF
END_IF

//
// Wait for start 
IF n_Step=20 THEN
	//
	// Check condition 
	b_Condition:= GVL_IO.ib_SP1_Ready AND (GVL_IO.ib_SP1_Button_On OR GVL_ResearchData.b_RED_Superplasticizer_Pump_Power_On_Laptop);
	//
	// Do 
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=30;
	END_IF
END_IF

//
// Run calibration until time is over 
IF n_Step=30 THEN
	//
	// Check condition 
	b_Condition:=t_SP1_Calibration_Time.Q; 
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=40;
	END_IF
END_IF

//
// Reserve
IF n_Step=40 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=50;
	END_IF
END_IF

//
// Return to step 10 
IF n_Step=50 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		//
		// Reset check mode on
		GVL_ResearchData.b_RED_Superplasticizer_Pump_Check_On:=FALSE;
		// Turn Off the pump
		GVL_ResearchData.b_RED_Superplasticizer_Pump_Power_On_Laptop:=FALSE;
		n_Step:=10;
	END_IF
END_IF

// ****************************************
// Timer
// ****************************************
t_SP1_Calibration_Time(
	IN:=n_Step=30,
	PT:=GVL_ResearchData.n_RED_Superplasticizer_Pump_Check_Duration);

// ****************************************
// Reset
// ****************************************
IF NOT GVL_ResearchData.b_RED_Superplasticizer_Pump_Check_On THEN
  //
  // Rest step chain
  n_Step:=0;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="P_SP1_Check">
      <LineId Id="9" Count="17" />
      <LineId Id="5" Count="0" />
      <LineId Id="161" Count="2" />
      <LineId Id="43" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="44" Count="11" />
      <LineId Id="42" Count="0" />
      <LineId Id="60" Count="12" />
      <LineId Id="57" Count="0" />
      <LineId Id="75" Count="12" />
      <LineId Id="74" Count="0" />
      <LineId Id="109" Count="12" />
      <LineId Id="88" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="149" Count="11" />
      <LineId Id="140" Count="0" />
      <LineId Id="123" Count="13" />
      <LineId Id="202" Count="1" />
      <LineId Id="137" Count="1" />
      <LineId Id="122" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="170" Count="9" />
      <LineId Id="181" Count="3" />
      <LineId Id="89" Count="1" />
      <LineId Id="56" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>