<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="P_Set_Research_Data" Id="{773f30f1-b7d3-4c7e-b27f-8d66212207e7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Set_Research_Data
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Set all research data for the process
// 
// AUTHOR      :  Seyma Gürel / Philippe Fleischmann / Weiting Chen
// 
// EMAIL       :  scotto@arch.ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2022
//
// ***********************************************************************************


//***********************************************************************************
// Inline mixer 
//***********************************************************************************

// Updating Mixer 1 max speed
GVL_VAR.f_MI1_MaxSpeed:= 720; // [distance/s] ( equel to 120 rpm, by measurement 221006)



//***********************************************************************************
// Superplasticizer pump 
//***********************************************************************************

//Superplasticizer Pump checking values (WT useing for CAC 240208
GVL_ResearchData.n_RED_Superplasticizer_Pump_Check_Flowrate:=GVL_ResearchData.n_RED_Superplasticizer_Pump_Max_Flowrate/2;             // [ml/min]
GVL_ResearchData.n_RED_Superplasticizer_Pump_Max_Flowrate:=138;				// Calibration number 240208 138 (122ml/min 5018 rev/min(rpm) in VIsco proparam driver) 

GVL_ResearchData.n_RED_Superplasticizer_Pump_Check_Duration:=T#60000MS;     // [ms]
//GVL_ResearchData.f_RED_Superplasticizer_Pump_Density:=1.06;               // [g/cm^3] TODO use for calibration number

GVL_ResearchData.n_RED_Superplasticizer_Pump_Flush_Flowrate:=GVL_ResearchData.f_RED_Status_Superplasticizer_Pump_Max_Flowrate_ml_per_min;	// [ml/min]

//[32767 is equal 10v output and it means maximum setup speed from ViscoTec 3803 rpm]


//***********************************************************************************
// Accelerator pump 1
//***********************************************************************************
//
// Accelerator Pump checking values (WT using for Xseed 240208
GVL_ResearchData.n_RED_Acceleration_Pump_Check_Flowrate:=GVL_ResearchData.n_RED_Acceleration_Pump_Max_Flowrate/2;     		
GVL_ResearchData.n_RED_Acceleration_Pump_Max_Flowrate:=637; 			// Calibration number 240208 (274 ml/min 4800 rev/min(rpm) in VIsco proparam driver) 

GVL_ResearchData.n_RED_Acceleration_Pump_Check_Duration:=T#60000MS;   	// [ms]

//GVL_ResearchData.f_RED_Acceleration_Pump_Density:=1.62;               // [kg/m^3] TODO use for calibration number

GVL_ResearchData.n_RED_Acceleration_Pump_Flush_Flowrate:=GVL_ResearchData.f_RED_Status_Acceleration_Pump_Max_Flowrate_ml_per_min;	// [ml/min]


//[32767 is equal 10v output and it means maximum setup speed from ViscoTec 3517 rpm]
GVL_ResearchData.f_RED_Acceleration_Pump_Mass:= (GVL_ResearchData.n_RED_Acceleration_Pump_Check_Flowrate*
												(TO_REAL(GVL_ResearchData.n_RED_Acceleration_Pump_Check_Duration)/TO_REAL(T#60000MS))*
												GVL_ResearchData.f_RED_Acceleration_Pump_Density);


//***********************************************************************************
// Concrete pump 1
//***********************************************************************************
GVL_ResearchData.f_RED_Concrete_Pump_Check_Flowrate:=2.5;		//[l/min] (1.3 to 3.7)
GVL_ResearchData.n_RED_Concrete_Pump_Check_Duration_Time:=T#15000MS;		// [ms]
GVL_ResearchData.n_RED_Concrete_Pump_Flush_Flowrate:=GVL_ResearchData.f_RED_Status_Concrete_Pump_Max_Flowrate_l_per_min; // [l/min]

//GVL_ResearchData.f_RED_Concrete_Pump_Density:=2.307;		// [kg/m^3]
GVL_ResearchData.f_RED_Concrete_Pump_Check_Mass:= (GVL_ResearchData.f_RED_Concrete_Pump_Check_Flowrate * 1000 *
												(TO_REAL(GVL_ResearchData.n_RED_Concrete_Pump_Check_Duration_Time)/TO_REAL(T#60000MS))*
												GVL_ResearchData.f_RED_Concrete_Pump_Density);

]]></ST>
    </Implementation>
    <LineIds Name="P_Set_Research_Data">
      <LineId Id="182" Count="18" />
      <LineId Id="22" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="267" Count="1" />
      <LineId Id="81" Count="0" />
      <LineId Id="269" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="221" Count="1" />
      <LineId Id="253" Count="1" />
      <LineId Id="227" Count="0" />
      <LineId Id="255" Count="0" />
      <LineId Id="228" Count="1" />
      <LineId Id="341" Count="1" />
      <LineId Id="230" Count="0" />
      <LineId Id="223" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="346" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="202" Count="0" />
      <LineId Id="256" Count="1" />
      <LineId Id="244" Count="0" />
      <LineId Id="214" Count="1" />
      <LineId Id="210" Count="0" />
      <LineId Id="338" Count="0" />
      <LineId Id="337" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="335" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="350" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="329" Count="1" />
      <LineId Id="328" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="279" Count="1" />
      <LineId Id="261" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="321" Count="0" />
      <LineId Id="290" Count="0" />
      <LineId Id="264" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="319" Count="0" />
      <LineId Id="318" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>